--- a/client/package.json
+++ b/client/package.json
@@ -2,17 +2,16 @@
   "name": "groceries",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "express": "^4.17.1",
-    "mongoose": "^5.10.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
-    "path": "^0.12.7",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "axios": "^0.20.0",
+    "object-path": "^0.11.5",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
