--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "password-validator": "^5.1.1",
     "path": "^0.12.7"
   }
 }
