--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "password-validator": "^5.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3"
   },
