Created Splashscreen Component
-Created SplashScreen component to render when the application is loading

--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "object-path": "^0.11.5",
     "password-validator": "^5.1.1",
     "react": "^16.14.0",
+    "react-animation": "^1.2.2",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-spinners": "^0.11.0",
     "typeface-almarai": "^1.1.13"
   },
   "scripts": {
