--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "List keeper with a log in authentication system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild":"cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
