--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "groceries",
   "version": "1.0.0",
   "description": "List keeper with a log in authentication system",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild":"cd client && npm install && npm run build"
+    "start": "node app.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
